fix landing page contrast error

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 footer {
     text-align: center;
-    background-color: #357ebd;
+    background-color: #285c89;
 
 }
 
