--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 10px;
-    background-color: #357ebd;
+    background-color: #285c89;
 }
 
 header a {
